Co-authored-by: Alex Adamovic <alexadamovic@users.noreply.github.com>

--- a/FriendLetter/Views/Home/Postcard.cshtml
+++ b/FriendLetter/Views/Home/Postcard.cshtml
@@ -18,7 +18,7 @@
   <p>Travel Enthusiast @Model.Sender</p>
   <p>I have been to: @foreach (var location in Model.VacationLocation)
     {
-      @location<br />
+      @location<br>
     }
   </p>
 </body>
